--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>Enter Your Place Details</h1>
+  <h1>Udpate Your Place Details</h1>
   <%= render 'form' %>
 </div>
