--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -5,8 +5,10 @@
   <br/><br/>
   <p><%= @place.description %></p>
   <br />
-  <small>Added by <%= @place.user.email %></small>
+  <% if @place.user.present? %>
+    <small>Added by <%= @place.user.email %></small>
   <br />
+  <% end %>
 
   <div class="pull-right">
   <% if current_user && @place.user == current_user %>
