--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -37,3 +37,10 @@ font-family: 'caviar_dreamsregular';
   font-family: 'caviar_dreamsbold', sans-serif;
   font-size:26px;
 }
+
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding:8px;
+}
