--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -9,7 +9,36 @@
     <small>Added by <%= @place.user.email %></small>
   <br />
   <% end %>
+  <br />
 
+
+
+
+  <% if @place.latitude.present? && @place.longitude.present? %>
+    <script>
+      function initMap() {
+        var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+          position: myLatLng,
+          map: map,
+          title: 'Hello World!'
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key= AIzaSyBx35xjF6FFN2Y7P7tr6dG6SNXmVbx9PrI&callback=initMap">
+    </script>
+
+    <div id="map"></div>
+  <% end %>
+  <br />
   <div class="pull-right">
   <% if current_user && @place.user == current_user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
