--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,6 +39,17 @@
     <div id="map"></div>
   <% end %>
   <br />
+
+  <div class="clear"></div>
+  <%= simple_form_for @comment, url: '#' do |f| %>
+    <%= f.input :message %>
+    <%= f.input :rating %>
+    <br />
+    <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+  <% end %>
+
+  <br />
+
   <div class="pull-right">
   <% if current_user && @place.user == current_user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
