--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -47,6 +47,64 @@
   <br />
 
   <div class="col-xs-10 col-xs-offset-1">
+    <h1 class="pull-left">Photos</h1>
+     <!-- Button trigger modal -->
+    <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+      Upload a photo
+    </button>
+  </div>
+  <div class="clear"></div>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">Add a photo</h4>
+        </div>
+        <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+          <div class="modal-body">
+            <%= f.input :picture, as: :file %>
+            <%= f.input :caption %>
+            <br />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <%= f.submit "Add a photo", class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+
+<div class="clear"></div>
+
+  <% if @place.photos.present? %>
+    <% @place.photos.each do |photo| %>
+      <div class="col-xs-12 col-sm-6">
+        <blockquote>
+          <% if photo.present? %>
+            <%= image_tag photo.picture, class:"main_img" %>
+            <br />
+            <div class="modal-body">
+            <b><%= photo.caption %></b>
+            <small>Uploaded by <%= photo.user.email %></small>
+            </div>
+          <% end %>
+        </blockquote>
+      </div>
+    <% end %>
+  <% else %>
+    <div class="col-xs-12">
+      <p><i>No photos yet. Add your own today!</i></p>
+    </div>
+  <% end %>
+  <br />
+
+  <div class="clear"></div>
+
+  <div class="col-xs-10 col-xs-offset-1">
     <h1 class="pull-left">Comments</h1>
      <!-- Button trigger modal -->
     <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
