fixes button ids

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -49,13 +49,13 @@
   <div class="col-xs-10 col-xs-offset-1">
     <h1 class="pull-left">Photos</h1>
      <!-- Button trigger modal -->
-    <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+    <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#addPhoto">
       Upload a photo
     </button>
   </div>
   <div class="clear"></div>
   <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addPhoto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -107,13 +107,13 @@
   <div class="col-xs-10 col-xs-offset-1">
     <h1 class="pull-left">Comments</h1>
      <!-- Button trigger modal -->
-    <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+    <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#addComment">
       Add a comment
     </button>
   </div>
   <div class="clear"></div>
   <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addComment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
