--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,72 @@
 
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag 'slider1.jpg' %>
+      <div class="carousel-caption">
+        Captions are amazing
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider2.jpg' %>
+      <div class="carousel-caption">
+        Captions are inpsiring
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider3.jpg' %>
+      <div class="carousel-caption">
+        Captions are disrtracting
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider4.jpg' %>
+      <div class="carousel-caption">
+        Captions are annoying
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider5.jpg' %>
+      <div class="carousel-caption">
+        Captions are intriguing
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider6.jpg' %>
+      <div class="carousel-caption">
+        Captions are destabalizing
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider7.jpg' %>
+      <div class="carousel-caption">
+        Captions are abhorent
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
+
 <%= will_paginate @posts %>
 
 <% @places.each do |place| %>
