adds slider images and formatting

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -14,45 +14,45 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are amazing
+        Be more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg' %>
+      <%= image_tag 'slider2.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are inpsiring
+        Ask more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg' %>
+      <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are disrtracting
+        See more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider4.jpg' %>
+      <%= image_tag 'slider4.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are annoying
+        Attempt more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider5.jpg' %>
+      <%= image_tag 'slider5.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are intriguing
+        Accomplish more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider6.jpg' %>
+      <%= image_tag 'slider6.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are destabalizing
+        Feel more
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider7.jpg' %>
+      <%= image_tag 'slider7.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Captions are abhorent
+        Be more
       </div>
     </div>
 
