--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -36,6 +36,7 @@ font-family: 'caviar_dreamsregular';
   color: #E3E85A;
   font-family: 'caviar_dreamsbold', sans-serif;
   font-size:26px;
+  margin-bottom:0;
 }
 
 .field_with_errors {
@@ -84,4 +85,25 @@ blockquote p {
     width: auto;
     max-width: 50px;
     max-height: 50px;
+}
+
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    max-height: 550px;
+    width: 100%;
+}
+
+.carousel-caption {
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 60px;
+    font-weight:100;
+    text-shadow: rgba(0,0,0,0.95) 2px 2px;
+    background-color: rgba(0,0,0,0.5);
+    width:100%;
+    position:absolute;
+    left:0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
