working on images and index text

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,43 +16,57 @@
     <div class="item active">
       <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Be more
+        Hippies. They're everywhere.
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider2.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Ask more
+        It's not a presentation, it's a hate speech!
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        See more
+        Respect my authoritaaay
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider4.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Attempt more
+        I'm not fat, I'm festively plump
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider5.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Accomplish more
+        I really want to go to Casa Bonita.
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider6.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Feel more
+        I'm not fat. I just got a sweet hockey body.
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider7.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Be more
+        Anything that's fun costs at least eight dollars.
+        <br />
+        <small>- Eric Cartman</small>
       </div>
     </div>
 
